Java8 버전으로 Test 수정 & JUnit5 적용 & bin 삭제